--- a/PyQt/pyqt_ui/bed_mainwindow.ui
+++ b/PyQt/pyqt_ui/bed_mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1385</width>
+    <width>933</width>
     <height>1154</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="8">
+    <item row="0" column="0" colspan="5">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -31,7 +31,7 @@
       </property>
      </spacer>
     </item>
-    <item row="0" column="8">
+    <item row="0" column="5">
      <widget class="QPushButton" name="toggleBtn">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(170, 0, 0);
@@ -42,36 +42,7 @@ border-radius: 15px;</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="8">
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>17</width>
-        <height>112</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="2" column="0">
-     <spacer name="horizontalSpacer_12">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>358</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="2" column="1" colspan="6">
+    <item row="1" column="1" rowspan="2" colspan="3">
      <widget class="QLabel" name="label">
       <property name="maximumSize">
        <size>
@@ -90,13 +61,42 @@ border-radius: 15px;</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="7" colspan="2">
+    <item row="1" column="4">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>225</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="0">
+     <spacer name="horizontalSpacer_12">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>358</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="4" colspan="2">
      <spacer name="horizontalSpacer_13">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
+       <enum>QSizePolicy::Expanding</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -135,8 +135,23 @@ border-radius: 15px;</string>
       </property>
      </spacer>
     </item>
-    <item row="4" column="2" colspan="2">
+    <item row="4" column="2">
      <widget class="QPushButton" name="ReadSD">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -150,27 +165,17 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="4" column="7" colspan="2">
-     <spacer name="horizontalSpacer_15">
+    <item row="4" column="3" colspan="3">
+     <spacer name="horizontalSpacer_17">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>473</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="5" column="0" colspan="2">
-     <spacer name="horizontalSpacer_11">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>494</width>
+        <width>455</width>
         <height>28</height>
        </size>
       </property>
@@ -192,8 +197,8 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="5" column="7" colspan="2">
-     <spacer name="horizontalSpacer_10">
+    <item row="6" column="0" colspan="2">
+     <spacer name="horizontalSpacer_11">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -205,8 +210,14 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="6" column="2" colspan="2">
+    <item row="6" column="2">
      <widget class="QPushButton" name="ConfigButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -220,7 +231,23 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="6" column="4" rowspan="2">
+    <item row="6" column="3" colspan="3">
+     <spacer name="horizontalSpacer_18">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>455</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="7" column="2">
      <spacer name="verticalSpacer_4">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -236,7 +263,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="7" column="0" rowspan="2" colspan="2">
+    <item row="8" column="0" colspan="2">
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -249,21 +276,14 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="7" column="7" rowspan="2" colspan="2">
-     <spacer name="horizontalSpacer_7">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="8" column="2" colspan="3">
+    <item row="8" column="2">
      <widget class="QPushButton" name="CreateRecordsButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -277,7 +297,23 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="9" column="4">
+    <item row="8" column="3" colspan="3">
+     <spacer name="horizontalSpacer_15">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>455</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="9" column="2">
      <spacer name="verticalSpacer_6">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -293,8 +329,8 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="9" column="6" colspan="3">
-     <spacer name="horizontalSpacer_8">
+    <item row="10" column="0" colspan="2">
+     <spacer name="horizontalSpacer_6">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -306,8 +342,14 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="10" column="2" colspan="2">
+    <item row="10" column="2">
      <widget class="QPushButton" name="RecordsButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -321,20 +363,23 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="11" column="0" colspan="2">
-     <spacer name="horizontalSpacer_6">
+    <item row="10" column="3" colspan="3">
+     <spacer name="horizontalSpacer_14">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>494</width>
+        <width>455</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="11" column="5">
+    <item row="11" column="2">
      <spacer name="verticalSpacer_8">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -363,8 +408,14 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="12" column="2" colspan="2">
+    <item row="12" column="2">
      <widget class="QPushButton" name="DataViewButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -378,20 +429,23 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="12" column="7" colspan="2">
-     <spacer name="horizontalSpacer_14">
+    <item row="12" column="3" colspan="3">
+     <spacer name="horizontalSpacer_19">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>473</width>
+        <width>455</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="13" column="3" colspan="2">
+    <item row="13" column="2">
      <spacer name="verticalSpacer_2">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -411,8 +465,8 @@ border-radius: 15px;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1385</width>
-     <height>23</height>
+     <width>933</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
