--- a/PyQt/pyqt_ui/bed_view_record.ui
+++ b/PyQt/pyqt_ui/bed_view_record.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: rgb(1,0,1);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1" colspan="2">
+   <item row="0" column="1">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -30,7 +30,7 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="5">
+   <item row="0" column="3">
     <widget class="QPushButton" name="ButtonOpen">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -45,7 +45,7 @@ border-radius: 15px;
      </property>
     </widget>
    </item>
-   <item row="0" column="6">
+   <item row="0" column="4">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -58,7 +58,7 @@ border-radius: 15px;
      </property>
     </spacer>
    </item>
-   <item row="1" column="1" colspan="2">
+   <item row="1" column="1">
     <spacer name="horizontalSpacer_4">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -71,7 +71,7 @@ border-radius: 15px;
      </property>
     </spacer>
    </item>
-   <item row="1" column="3">
+   <item row="1" column="2">
     <widget class="QLabel" name="label_2">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -84,7 +84,7 @@ border-radius: 15px;
      </property>
     </widget>
    </item>
-   <item row="1" column="5">
+   <item row="1" column="3">
     <widget class="QLineEdit" name="FirstNameLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -95,7 +95,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="8">
+   <item row="1" column="6">
     <spacer name="horizontalSpacer_11">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -108,7 +108,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="2" column="1" colspan="2">
+   <item row="2" column="1">
     <spacer name="horizontalSpacer_25">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -121,7 +121,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="2" column="3">
+   <item row="2" column="2">
     <widget class="QLabel" name="label_10">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -134,7 +134,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="5">
+   <item row="2" column="3">
     <widget class="QLineEdit" name="LastNameLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -145,7 +145,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="8">
+   <item row="2" column="6">
     <spacer name="horizontalSpacer_24">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -158,7 +158,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="1" colspan="2">
+   <item row="3" column="1">
     <spacer name="horizontalSpacer_5">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -171,7 +171,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="3">
+   <item row="3" column="2">
     <widget class="QLabel" name="label_5">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -184,7 +184,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="5">
+   <item row="3" column="3">
     <widget class="QLineEdit" name="AgeLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -195,7 +195,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="8">
+   <item row="3" column="6">
     <spacer name="horizontalSpacer_9">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -221,7 +221,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="4" column="3">
+   <item row="4" column="2">
     <widget class="QLabel" name="label_3">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -234,7 +234,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="5">
+   <item row="4" column="3">
     <widget class="QLineEdit" name="PIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -245,7 +245,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="7" colspan="2">
+   <item row="4" column="5" colspan="2">
     <spacer name="horizontalSpacer_8">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -271,7 +271,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="5" column="2" colspan="2">
+   <item row="5" column="2">
     <widget class="QLabel" name="label_14">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -284,7 +284,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="4" colspan="2">
+   <item row="5" column="3">
     <widget class="QLineEdit" name="StudyIDLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -295,7 +295,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="7">
+   <item row="5" column="5">
     <spacer name="horizontalSpacer_13">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -308,7 +308,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="6" column="1" rowspan="2" colspan="2">
+   <item row="6" column="1">
     <spacer name="horizontalSpacer_7">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -321,7 +321,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="6" column="3">
+   <item row="6" column="2">
     <widget class="QLabel" name="label_4">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -334,7 +334,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="5">
+   <item row="6" column="3">
     <widget class="QLineEdit" name="GenderLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -345,20 +345,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="8" rowspan="2">
-    <spacer name="horizontalSpacer_10">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>160</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="8" column="1" colspan="2">
+   <item row="7" column="1">
     <spacer name="horizontalSpacer_14">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -371,7 +358,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="8" column="3">
+   <item row="7" column="2">
     <widget class="QLabel" name="label_6">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -384,7 +371,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="5">
+   <item row="7" column="3">
     <widget class="QLineEdit" name="WeightLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -395,7 +382,20 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="3">
+   <item row="7" column="6">
+    <spacer name="horizontalSpacer_10">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>160</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="2">
     <widget class="QLabel" name="label_7">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -408,7 +408,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="5">
+   <item row="8" column="3">
     <widget class="QLineEdit" name="HeightLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -419,7 +419,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="3">
+   <item row="9" column="2">
     <widget class="QLabel" name="label_8">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -432,7 +432,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="5">
+   <item row="9" column="3">
     <widget class="QLineEdit" name="PhnNumberLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -443,7 +443,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="8">
+   <item row="9" column="6">
     <spacer name="horizontalSpacer_15">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -456,7 +456,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="11" column="3">
+   <item row="10" column="2">
     <widget class="QLabel" name="label_11">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -469,7 +469,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="5">
+   <item row="10" column="3">
     <widget class="QLineEdit" name="EmailLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -480,7 +480,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="0">
+   <item row="11" column="0">
     <spacer name="horizontalSpacer_16">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -493,7 +493,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="12" column="3">
+   <item row="11" column="2">
     <widget class="QLabel" name="label_12">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -506,7 +506,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="5">
+   <item row="11" column="3">
     <widget class="QLineEdit" name="AddrLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -517,7 +517,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="8">
+   <item row="11" column="6">
     <spacer name="horizontalSpacer_17">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -530,7 +530,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="13" column="0">
+   <item row="12" column="0">
     <spacer name="horizontalSpacer_18">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -543,7 +543,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="13" column="3" colspan="2">
+   <item row="12" column="2">
     <widget class="QLabel" name="label_13">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -556,7 +556,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="5">
+   <item row="12" column="3">
     <widget class="QLineEdit" name="MonitorPeriodLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -567,7 +567,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="8">
+   <item row="12" column="6">
     <spacer name="horizontalSpacer_19">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -580,7 +580,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="14" column="0">
+   <item row="13" column="0">
     <spacer name="horizontalSpacer_26">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -593,7 +593,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="14" column="3">
+   <item row="13" column="2">
     <widget class="QLabel" name="label_9">
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -606,7 +606,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="14" column="5">
+   <item row="13" column="3">
     <widget class="QLineEdit" name="TrackerLabel">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -617,7 +617,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="14" column="7">
+   <item row="13" column="5">
     <spacer name="horizontalSpacer_27">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -630,7 +630,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="15" column="0">
+   <item row="14" column="0">
     <spacer name="horizontalSpacer_28">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -643,7 +643,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="15" column="5">
+   <item row="14" column="3">
     <widget class="QPushButton" name="ButtonSearch">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -658,7 +658,7 @@ border-radius: 15px;
      </property>
     </widget>
    </item>
-   <item row="15" column="7">
+   <item row="14" column="5">
     <spacer name="horizontalSpacer_29">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -671,7 +671,7 @@ border-radius: 15px;
      </property>
     </spacer>
    </item>
-   <item row="16" column="0" colspan="9">
+   <item row="15" column="0" colspan="7">
     <widget class="QTabWidget" name="tabWidget">
      <property name="font">
       <font>
@@ -753,7 +753,35 @@ border-radius: 15px;
      </widget>
     </widget>
    </item>
-   <item row="17" column="3">
+   <item row="16" column="2">
+    <spacer name="horizontalSpacer_30">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>161</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="16" column="3">
+    <widget class="QPushButton" name="SaveAsCsv">
+     <property name="styleSheet">
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
+font: 9pt &quot;Microsoft YaHei UI&quot;;
+color: rgb(255, 255, 255);
+border-style: solid;
+border-radius: 15px;
+</string>
+     </property>
+     <property name="text">
+      <string>Save as CSV</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="2">
     <spacer name="horizontalSpacer_23">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -766,7 +794,7 @@ border-radius: 15px;
      </property>
     </spacer>
    </item>
-   <item row="17" column="5">
+   <item row="17" column="3">
     <widget class="QPushButton" name="MainMenu">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
